<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF4E6"
    tools:context=".SignUpPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_page">

        <ImageView
            android:id="@+id/small_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/yarn_ball"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="240dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="300dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="360dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextConfirmPassword"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="420dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/background_color"
            android:textColorHint="@color/background_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="154dp"
            android:layout_height="48dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="496dp"
            android:backgroundTint="@color/secondary_purple"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="232dp"
            android:layout_height="19dp"
            android:layout_marginTop="552dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/already_having_an_account"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textConnect"
            android:layout_width="117dp"
            android:layout_height="20dp"
            android:layout_marginTop="620dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/or_connect_using"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="55dp"
            android:layout_height="19dp"
            android:layout_marginTop="552dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/login"
            android:textColor="@color/main_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/googleButton"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginTop="648dp"
            android:src="@drawable/google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/google_button" />

        <ImageButton
            android:id="@+id/raverlyButton"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginTop="648dp"
            android:src="@drawable/raverly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/raverly_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>