<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".Pages.AddProjectPage">

    <TextView
        android:id="@+id/textAddNewProject"
        android:layout_width="158dp"
        android:layout_height="96dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/addNewProjectPage"
        android:textColor="@color/background_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/craftType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/what_kind_of_craft"
        android:textColor="@color/background_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerCraftType"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:paddingStart="10dp"
        android:background="@drawable/dropdown_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/nameProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/name_your_project"
        android:textColor="@color/background_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextProjectName"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="304dp"
        android:autofillHints=""
        android:background="@drawable/dropdown_background"
        android:ems="10"
        android:hint="@string/enter_project_name"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:text="@string/i_used_a_pattern"
        android:textColor="@color/background_color"
        app:buttonTint="@color/unselected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPatternName"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="432dp"
        android:autofillHints=""
        android:background="@drawable/dropdown_background"
        android:ems="10"
        android:hint="@string/enter_the_pattern_name"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/background_color"
        android:textColorHint="@color/background_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>